source/kCura.IntegrationPoints.Web/Content/import.css
#importCustomButton {
    position: relative;
    display: inline-block;
    padding: 5px;
    margin-top: 2px;
    text-align: left;
    min-width: 112.419px;
}

#importCustomButtonUl {
    position: absolute;
    background-color: #2356a6;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 0px 0px;
    z-index: 1;
    text-align: left;
    margin: 9px 0 0 -6px;
    padding-top: 0px;
    display: block;
    width: 112.378px;
    margin: 8px 0px 0px -10px;
}

#importCustomButton:hover #importCustomButtonUl {
    width: inherit;
}

.importPreviewDropdownItem:hover {
    font-weight: bold;
    color: white;
    background: linear-gradient(#007fc6, #0063ae);
}

.importPreviewDropdownItem {
    padding-bottom: 5px;
    padding-left: 10px;
}

